# torch-sim

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  citation.cff  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/workflows/: docs.yml  link-check-config.json  link-check.yml  lint.yml  test.yml
docs/: conf.py  index.md
docs/_static/: draw_pkg_treemap.py  get_module_graph_dot_file.py  torch-sim-module-graph.dot
docs/dev/: add_model.md  batching.md  dev_install.md
docs/reference/: index.rst
docs/tutorials/: index.rst
docs/user/: index.rst  overview.md  test.md
examples/: README.md  readme.md
examples/1_Introduction/: 1.1_Lennard_Jones.py  1.2_MACE.py  1.3_Batched_MACE.py  1.4_M3GNet.py  1.5_Fairchem.py
examples/2_Structural_optimization/: 2.1_Lennard_Jones_FIRE.py  2.2_Soft_Sphere_FIRE.py  2.3_MACE_FIRE.py  2.4_Batched_MACE_Gradient_Desent.py  2.4_MACE_UnitCellFilter_FIRE.py  2.5_Batched_MACE_UnitCellFilter_Gradient_Desent.py  2.5_MACE_FrechetCellFilter_FIRE.py  2.6_Batched_MACE_Gradient_Descent.py  2.6_Batched_MACE_Gradient_Desent.py  2.6_Batched_MACE_UnitCellFilter_FIRE.py  2.7_Batched_MACE_Hot_Swap_Gradient_Desent.py  2.7_Batched_MACE_UnitCellFilter_Gradient_Desent.py  2.8_Batched_MACE_UnitCellFilter_FIRE.py  2.8_MACE_UnitCellFilter_FIRE.py  2.9_Batched_MACE_FrechetCellFilter_FIRE.py
examples/3_Dynamics/: 3.10_Hybrid_swap_mc.py  3.11_Lennard_Jones_NPT_Langevin.py  3.12_MACE_NPT_Langevin.py  3.13_MACE_NVE_non_pbc.py  3.1_Lennard_Jones_NVE.py  3.2_MACE_NVE.py  3.3_MACE_NVE_cueq.py  3.4_MACE_NVT_Langevin.py  3.5_MACE_NVT_Nose_Hoover.py  3.6_MACE_NVT_Nose_Hoover_temp_profile.py  3.7_Lennard_Jones_NPT_Nose_Hoover.py  3.8_MACE_NPT_Nose_Hoover.py  3.9_MACE_NVT_staggered_stress.py
examples/4_High_level_api/: 4.1_high_level_api.py  4.2_auto_batching_api.py
examples/5_Trajectory_writing/: 5.1_Trajectory_logging.py
examples/5_Workflow/: 5.1_a2c_silicon.py  5.2_a2c_silicon_batched.py  5.3_Hot_Swap_WBM.py
examples/6_Phonons/: 6.1_Phonon_dos_batched_MACE.py  6.2_Thermal_conductivity_MACE.py  6.3_Thermal_conductivity_batched_MACE.py
examples/6_Workflow/: 6.1_a2c_silicon.py
examples/7_Others/: 7.1_Soft_sphere_autograd.py  7.2_Stress_autograd.py  7.3_Batched_neighbor_list.py  7.4_Elastic_Tensor_MACE.py
examples/7_Phonons/: 7.1_Phonon_dos_batched_MACE.py  7.2_Thermal_conductivity_MACE.py  7.3_Thermal_conductivity_batched_MACE.py
examples/9_Others/: 9.1_Soft_sphere_autograd.py  9.2_Stress_autograd.py  9.3_Batched_neighbor_list.py  9.4_Elastic_Tensor_MACE.py
examples/scripts/: readme.md
examples/scripts/1_Introduction/: 1.1_Lennard_Jones.py  1.2_MACE.py  1.3_Batched_MACE.py  1.3_Fairchem.py  1.4_Fairchem.py
examples/scripts/2_Structural_optimization/: 2.10_Batched_MACE_FrechetCellFilter_FIRE.py  2.1_Lennard_Jones_FIRE.py  2.2_Soft_Sphere_FIRE.py  2.3_MACE_FIRE.py  2.3_MACE_Gradient_Descent.py  2.4_MACE_FIRE.py  2.4_MACE_UnitCellFilter_FIRE.py  2.5_MACE_FrechetCellFilter_FIRE.py  2.5_MACE_UnitCellFilter_Gradient_Descent.py  2.6_Batched_MACE_Gradient_Descent.py  2.6_MACE_UnitCellFilter_FIRE.py  2.7_Batched_MACE_FIRE.py  2.7_Batched_MACE_UnitCellFilter_Gradient_Descent.py  2.7_MACE_FrechetCellFilter_FIRE.py  2.8_Batched_MACE_UnitCellFilter_FIRE.py  2.8_Batched_MACE_UnitCellFilter_Gradient_Descent.py  2.9_Batched_MACE_FrechetCellFilter_FIRE.py  2.9_Batched_MACE_UnitCellFilter_FIRE.py
examples/scripts/3_Dynamics/: 3.10_Hybrid_swap_mc.py  3.11_Lennard_Jones_NPT_Langevin.py  3.12_MACE_NPT_Langevin.py  3.13_MACE_NVE_non_pbc.py  3.1_Lennard_Jones_NVE.py  3.2_MACE_NVE.py  3.3_MACE_NVE_cueq.py  3.4_MACE_NVT_Langevin.py  3.5_MACE_NVT_Nose_Hoover.py  3.6_MACE_NVT_Nose_Hoover_temp_profile.py  3.8_MACE_NPT_Nose_Hoover.py  (+2 more)
examples/tutorials/: autobatching_tutorial.py  high_level_tutorial.py  hybrid_swap_tutorial.py  introductory_tutorial.py  low_level_tutorial.py  metatensor_tutorial.py  metatomic_tutorial.py  reporting_tutorial.py  state_tutorial.py  using_graphpes_tutorial.py
tests/: Interactive-1.interactive  conftest.py  test_autobatching.py  test_correlations.py  test_elastic.py  test_integrators.py  test_io.py  test_math.py  test_monte_carlo.py  test_neighbors.py  test_optimizers.py  test_optimizers_vs_ase.py  test_runners.py  test_state.py  test_trajectory.py  test_transforms.py  test_unbatched_integrators.py  test_unbatched_optimizers.py  test_utils.py  test_voigt.py
tests/models/: conftest.py  test_fairchem.py  test_graphpes.py  test_lennard_jones.py  test_mace.py  test_mattersim.py  test_metatensor.py  test_metatomic.py  test_morse.py  test_orb.py  test_sevennet.py  test_soft_sphere.py
tests/unbatched/: conftest.py  test_unbatched_integrators.py  test_unbatched_mace.py  test_unbatched_optimizers.py
tests/utils/: test_math.py  test_tools.py
tests/workflows/: test_a2c.py
torch_sim/: __init__.py  _version.py  autobatching.py  elastic.py  integrators.py  io.py  math.py  monte_carlo.py  neighbors.py  optimizers.py  quantities.py  runners.py  state.py  trajectory.py  transforms.py  typing.py  units.py
torch_sim/integrators/: __init__.py  md.py  npt.py  nve.py  nvt.py
torch_sim/models/: __init__.py  fairchem.py  graphpes.py  interface.py  lennard_jones.py  mace.py  mattersim.py  metatensor.py  metatomic.py  morse.py  orb.py  particle_life.py  sevennet.py  soft_sphere.py
torch_sim/properties/: __init__.py  correlations.py
torch_sim/unbatched/: readme.md  unbatched_integrators.py  unbatched_optimizers.py
torch_sim/utils/: a2c.py  batching.py  math.py  tools.py
torch_sim/workflows/: __init__.py  a2c.py  readme.md
torchsim/: __init__.py  autobatching.py  integrators.py  monte_carlo.py  neighbors.py  optimizers.py  quantities.py  runners.py  state.py  trajectory.py  transforms.py  unbatched_integrators.py  unbatched_optimizers.py  utils.py  workflows.py
torchsim/models/: __init__.py  fairchem.py  interface.py  lennard_jones.py  mace.py  morse.py  particle_life.py  soft_sphere.py
torchsim/workflows/: __init__.py  a2c_utils.py  batching_utils.py
(+34 files in other folders)
