
[project]
name = "torchsim"
version = "0.0.0rc"
description = "A pytorch toolkit for calculating material properties using MLIPs"
authors = [
    { name = "Abhijeet Gangan", email = "abhijeetgangan@g.ucla.edu" },
    { name = "Radical AI", email = "info@radical.ai" },
]
readme = "readme.md"
license = { file = "license" }
keywords = [
    "chemistry",
    "interatomic-potentials",
    "machine-learning",
    "materials-science",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "ase>=3.24",
    "binpacking>=1.5.2",
    "h5py>=3.12.1",
    "numpy>=1.26",
    "tables>=3.10.2",
    "torch>=2",
    "tqdm>=4.67",
    "vesin-torch>=0.3.1",
    "vesin>=0.3.1",
]

[project.optional-dependencies]
test = ["ase>=3.24", "pymatgen>=2024.11.3", "pytest-cov>=6", "pytest>=8"]
models = ["mace-torch>=0.3.11"]

[project.urls]
Repo = "https://github.com/radical-ai/torchsim"

[tool.setuptools.packages.find]
include = ["torchsim*"]
exclude = ["examples*", "tests*"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "-p no:warnings"

[tool.ruff]
target-version = "py311"
line-length = 90
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",  # Checks that *args arguments have type annotations.
    "ANN003",  # Checks that **kwargs arguments have type annotations.
    "ANN401",  # Allow use of type Any for function argument {name}
    "C408",    # Unnecessary {obj_type} call (rewrite as a literal)
    "COM812",  # missing-trailing-comma
    "D205",    # 1 blank line required between summary line and description
    "EM101",   # Exception must not use a string literal, assign to variable first
    "EM102",   # Exception must not use an f-string literal, assign to variable first
    "ERA001",  # Found commented-out code
    "FIX002",  # Line contains TODO, consider resolving the issue
    "G003",    # logging-string-concat
    "INP001",  # implicit-namespace-package
    "ISC001",  # avoid conflicts with the formatter
    "N803",    # Variable name should be lowercase
    "N806",    # Uppercase letters in variable names
    "PD010",   # .pivot_table is preferred to .pivot or .unstack; provides same functionality
    "PD015",   # pandas-use-of-pd-merge
    "PLR0912", # too many branches
    "PLR0913", # too many function arguments
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW2901", # Outer for loop variable overwritten by inner assignment target
    "PTH",     # flake8-use-pathlib
    "RUF001",  # String contains ambiguous
    "S101",    # Use of assertion statements
    "S301",    # pickle and modules that wrap it can be unsafe, possible security issue
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "SIM105",  # Use contextlib.suppress instead of try-except-pass
    "T201",    # print found
    "TD",      # flake8-todos
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY301",  # Abstract raise to an inner function
]
pydocstyle.convention = "google"
isort.split-on-trailing-comma = false
isort.lines-after-imports = 2
pep8-naming.ignore-names = ["get_kT", "kT"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["ANN201", "D", "S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.codespell]
check-filenames = true

[tool.pytest]
addopts = ["--cov-report=term-missing", "--cov=torchsim", "-v"]
testpaths = ["tests"]
